--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                           </span>
                         </h1>
                         <p>
-                          Hello everyone, I am a guy from Russia and young developer who works with really great technologies...
+                          Hello everyone, I am a young developer who works with really great technologies...
                         </p>
                       </div>
                     </div>
@@ -265,7 +265,7 @@
           </h3>
         </div>
         <p class="layout_padding2-top">
-          I'm Pavel, an optimistic and responsible guy, a lover of culture and nature, but attracted by the possibilities that technology offers. Already at young age, both nature and technology in all its forms impressed me so much that I wanted to know more about it. Fascinated by how everything was created and how people evolved and tried to bring everything to their advantage through technology, today I found myself as a developer who works with great technologies
+         I'm Pavel, a responsible guy, a lover of culture and nature, but attracted to the possibilities that technology offers. Already at a young age, both nature and technology in all their forms impressed me so much that I wanted to know more about them. Fascinated by how everything was created and how people evolved and tried to bring everything to their advantage through technology, today I find myself as a developer who works with great technologies.
         </p>
         <div class="img-box layout_padding2">
           <img src="images/about.png" alt="">
